--- a/jour1/exercise6/Birk/client/Makefile
+++ b/jour1/exercise6/Birk/client/Makefile
@@ -2,7 +2,7 @@ SOURCES=client.cpp
 
 EXE=client
 CXXFLAGS=-I. -g
-LDFLAGS=-lncurses 
+LDFLAGS=
 GOOGLETEST_LDFLAGS=-lgtest_main -lgtest -lpthread
 
 ARCH?=x86-64
