Server is probably finish

--- a/jour1/exercise6/Birk/server/Makefile
+++ b/jour1/exercise6/Birk/server/Makefile
@@ -2,7 +2,7 @@ SOURCES=server.cpp
 
 EXE=server
 CXXFLAGS=-I. -g
-LDFLAGS=-lncurses 
+LDFLAGS=
 GOOGLETEST_LDFLAGS=-lgtest_main -lgtest -lpthread
 
 ARCH?=x86-64
